--- a/arch/arm/configs/samsung_melius_defconfig
+++ b/arch/arm/configs/samsung_melius_defconfig
@@ -1,3 +1,5 @@
+CONFIG_LOCALVERSION="-lineage"
+# CONFIG_LOCALVERSION_AUTO is not set
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_ARCH_RANDOM=y
 CONFIG_EXPERIMENTAL=y
